# SED-EEW-SeisComP-contributions

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Dockerfile  README.md
.github/: pull_request_template.md
.github/workflows/: docker-publish.yml  repo-trigger.yml
apps/: CMakeLists.txt
apps/eew/: CMakeLists.txt
apps/eew/sceewenv/: CMakeLists.txt  main.cpp
apps/eew/sceewenv/descriptions/: sceewenv.rst  sceewenv.xml
apps/eew/sceewlog/: CMakeLists.txt  Specifications.md  eew2file.py  eew2shakemap.py  eewlogconfplot.py  eews2fcm.py  headlinealert.py  make_rupturejson_and_allxmlinput_fromdb_call_shake.py  sceewdump.py  sceewlog.py  ud_defaults.py  ud_interface.py
apps/eew/sceewlog/config/: closedpolygons.bna  sc3ml_0.10__cap_1.2.xsl  sc3ml_0.10__quakeml_1.2-RT_eewd.xsl  sc3ml_0.10__shakealert.xsl  sc3ml_0.11__CAP_1.2.xsl  sc3ml_0.11__cap_1.2.xsl  sc3ml_0.11__quakeml_1.2-RT_eewd.xsl  sc3ml_0.11__shakealert.xsl  sc3ml_0.12__cap_1.2.xsl  sc3ml_0.12__quakeml_1.2-RT_eewd.xsl  sc3ml_0.12__shakealert.xsl  sc3ml_0.13__cap_1.2.xsl  sc3ml_0.13__quakeml_1.2-RT_eewd.xsl  sc3ml_0.13__shakealert.xsl  sc3ml_0.14__cap_1.2.xsl  sc3ml_0.14__quakeml_1.2-RT_eewd.xsl  sc3ml_0.14__shakealert.xsl  sc3ml_0.15__cap_1.2.xsl  sc3ml_0.15__quakeml_1.2-RT_eewd.xsl  sc3ml_0.15__shakealert.xsl  sc3ml_0.7__quakeml_1.2-RT_eewd.xsl  sc3ml_0.8__cap_1.2.xsl  sc3ml_0.8__quakeml_1.2-RT_eewd.xsl  sc3ml_0.8__shakealert.xsl  sc3ml_0.9__cap_1.2.xsl  sc3ml_0.9__quakeml_1.2-RT_eewd.xsl  sc3ml_0.9__shakealert.xsl  sceewlog.cfg  scvsmaglog.cfg  world_cities.csv  world_cities_english.csv  world_cities_spanish.csv
apps/eew/sceewlog/descriptions/: sceewdump.xml  sceewlog.rst  sceewlog.xml
apps/eew/sceewlog/specifications/: Specifications.md
apps/eew/scfinder/: CMakeLists.txt  main.cpp  scfilterfinder.py
apps/eew/scfinder/config/: scfinder.cfg
apps/eew/scfinder/descriptions/: FinDer.rst  finder.xml  scfinder.rst  scfinder.xml
apps/eew/scfinder/utils/: makeFinDerFiles.py  makeFinDerPlot.py  makeFinDerPlot.sh  makeFinDerPlot_config.py  makeFinderMask.sh  scfilterfinder  scfilterfinder.py
apps/eew/scgof/: CMakeLists.txt  scgof.py
apps/eew/scgof/config/: scgof.cfg
apps/eew/scgof/descriptions/: scgof.xml
apps/eew/scvsmag/: CMakeLists.txt  README.md  Vs30Mapping.cpp  VsSiteCondition.h  equations.cpp  main.cpp  scvsmag.cpp  scvsmag.h  timeline.cpp  timeline.h  util.cpp  util.h
apps/eew/scvsmag-dev/: CMakeLists.txt  Specifications.md  sceewlog.py
apps/eew/scvsmag-dev/descriptions/: EEW.rst  VS.rst  eew.xml  scvsmag.rst  scvsmag.xml
apps/eew/scvsmag-dev/specifications/: Specifications.md
apps/eew/scvsmag/descriptions/: EEW.rst  VS.rst  scvsmag.xml  vs.xml
apps/scvsmag/: Vs30Mapping.cpp  Vs30Mapping.h  VsSiteCondition.cpp  VsSiteCondition.h  equations.cpp  equations.h  qualitycontrol.cpp  scvsmag.cpp  scvsmag.h  timeline.cpp  timeline.h  util.cpp  util.h
cmake/: FindFinDer.cmake
doc/: CMakeLists.txt  build-doc.py  requirements.txt
doc/apps/: sceewdump.rst  sceewenv.rst  sceewlog.rst  scfinder.rst  scgof.rst  scvsmag.rst
doc/base/: FinDer.rst  VS.rst  intro-finder.rst  intro-vs.rst  sceewenv.rst  sceewlog.rst  scfinder.rst  scvsmag.rst  setup-eewd.rst  setup-ese.rst  setup-finder.rst  tuto-finder-mask.rst  tuto-playbacks.rst
doc/base/templates/: breadcrumbs.html
doc/templates/: apps.rst  conf.py  index.rst
hooks/: build
libs/: CMakeLists.txt
libs/seiscomp/datamodel/vs/: databasereader.cpp  databasereader.h  envelope.cpp  envelope.h  envelopechannel.cpp  envelopechannel.h  envelopevalue.cpp  envelopevalue.h  types.cpp  types.h  vs.cpp  vs.h  vs_package.h
libs/seiscomp/datamodel/vs/share/: mysql.sql  sqlite3.sql
libs/seiscomp/processing/: CMakeLists.txt
libs/seiscomp/processing/eewamps/: baseprocessor.cpp  baseprocessor.h  config.cpp  config.h  preprocessor.cpp  preprocessor.h  processor.cpp  processor.h  router.cpp  router.h  samplepool.h
libs/seiscomp/processing/eewamps/filter/: CMakeLists.txt  diffcentral.h  taup.h
libs/seiscomp/processing/eewamps/processors/: envelope.cpp  gba.cpp  gba.h  onsitemag.cpp  onsitemag.h
libs/seiscomp/processing/eewamps/recordfilter/: CMakeLists.txt  gainandbaselinecorrection.cpp  gainandbaselinecorrection.h
libs/seiscomp3/: CMakeLists.txt
libs/seiscomp3/processing/eewamps/: CMakeLists.txt  baseprocessor.cpp  baseprocessor.h  config.cpp  config.h  preprocessor.cpp  preprocessor.h  processor.cpp  processor.h  router.cpp  router.h  samplepool.h
libs/seiscomp3/processing/eewamps/filter/: diffcentral.cpp  diffcentral.h  taup.cpp  taup.h
libs/seiscomp3/processing/eewamps/processors/: CMakeLists.txt  envelope.cpp  envelope.h  gba.cpp  gba.h  onsitemag.cpp  onsitemag.h
libs/seiscomp3/processing/eewamps/recordfilter/: gainandbaselinecorrection.cpp  gainandbaselinecorrection.h
patches/: bandpass.patch  event.py.diff  fdsnws_jakarta-2014.248.01_formatted.diff  scimport.patch  scimport_jan_23_2015.patch  scmag-race.patch  scwfparam.patch  scwfparam2.patch  scwfparam_dec_15_2014.patch  scwfparam_feb_12_2015.patch  sds.patch
plugins/: CMakeLists.txt
plugins/master/datamodel/: CMakeLists.txt  plugin_vs.cpp
plugins/recordstream/vs/: recordstream.cpp  recordstream.h
test/: CMakeLists.txt
test/eewamps/: CMakeLists.txt  README.md  testgba.cpp  testprocs.cpp
test/vs/: bindings.xml  global.cfg  seedlink.ini
