FIND_PACKAGE(FinDer)

IF(FinDer_FOUND)
	SET(FINDER_TARGET scfinder)
	SET(FINDER_SOURCES main.cpp)

	INCLUDE_DIRECTORIES(${FinDer_INCLUDE_DIR})
	ADD_DEFINITIONS("-D_REENTRANT")

	SC_ADD_EXECUTABLE(FINDER ${FINDER_TARGET})
	SC_LINK_LIBRARIES_INTERNAL(${FINDER_TARGET} eewamps datamodel_vs)
	SC_LINK_LIBRARIES(${FINDER_TARGET} ${FinDer_LIBRARIES})
	SC_INSTALL_INIT(${FINDER_TARGET} ../../../../trunk/apps/templates/initd.py)

	FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
	INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})
ELSE(FinDer_FOUND)
	MESSAGE(STATUS "libFinder not found, disable compilation of scfinder")
ENDIF(FinDer_FOUND)
